# OpenArcs

./: .gitignore  README.md  pydantic_demo.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  validation_task.md
arc_flash_studio/: __init__.py  network.py
arc_flash_studio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
arc_flash_studio/calculations/: arcing_current.py  constants.py  tables.py
arc_flash_studio/calculations/ieee_1584_2018/: __init__.py  arc_flash_boundary.py  calculator.py  enclosure.py  incident_energy.py  tables.py
arc_flash_studio/components/: __init__.py  base.py  bus.py  cable.py  cable_junction.py  defaults.py  enclosure.py  enums.py  mcc.py  open_air.py  panelboard.py  switchgear.py  transformer.py  utility_source.py
notebooks/: annex_d1_example.ipynb  debug_incident_energy.ipynb
tests/acceptance/: test_ieee_1584_2018_annex_d1.py  test_pp_validation.py
tests/integration/: test_radial_network.py  test_short_circuit.py
tests/unit/: test_bus.py  test_cable.py  test_defaults.py  test_enclosure.py  test_enums.py  test_equipment.py  test_network.py  test_transformer.py  test_utility_source.py
v0_vibe_coding_failure/: .gitignore  README.md  requirements.txt
v0_vibe_coding_failure/docs/: API_SPEC.md  ARCHITECTURE.md  IEEE_1584_Implementation.md  VALIDATION.md
v0_vibe_coding_failure/docs-site/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
v0_vibe_coding_failure/frontend/: package-lock.json  package.json
(+31 files in other folders)
